--- a/hack/database.yml
+++ b/hack/database.yml
@@ -1,6 +1,6 @@
 development:
   dialect: "mysql"
-  database: "gotrue_development"
+  database: "barong_development"
   host: {{ envOr "MYSQL_HOST" "127.0.0.1"  }}
   port: {{ envOr "MYSQL_PORT" "3306"  }}
   user: {{ envOr "MYSQL_USER"  "root"  }}
