feature: RS256 JWT signature * feature: First user as superadmin * enhancement: Add Kaigara to the Dockerfile * enhancement: Add .drone.yml w/ Docker build

--- a/example.env
+++ b/example.env
@@ -50,6 +50,7 @@ GOTRUE_SITE_URL="http://localhost:3000"
 GOTRUE_EXTERNAL_EMAIL_ENABLED="true"
 GOTRUE_EXTERNAL_PHONE_ENABLED="true"
 GOTRUE_EXTERNAL_IOS_BUNDLE_ID="com.supabase.gotrue"
+GOTRUE_FIRST_USER_SUPER_ADMIN="true"
 
 # Whitelist redirect to URLs here
 GOTRUE_URI_ALLOW_LIST=["http://localhost:3000"]
